--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,4 +11,209 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Black.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Black.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Black.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Black.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Black.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Black.svg#HankenGrotesk-Black') format('svg');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-SemiBold.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-SemiBold.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-SemiBold.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-SemiBold.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-SemiBold.svg#HankenGrotesk-SemiBold') format('svg');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Medium.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Medium.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Medium.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Medium.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Medium.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Medium.svg#HankenGrotesk-Medium') format('svg');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-ExtraLight.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-ExtraLight.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-ExtraLight.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-ExtraLight.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-ExtraLight.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-ExtraLight.svg#HankenGrotesk-ExtraLight') format('svg');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Regular.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Regular.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Regular.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Regular.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Regular.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Regular.svg#HankenGrotesk-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Bold.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Bold.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Bold.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Bold.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Bold.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Bold.svg#HankenGrotesk-Bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: HankenGrotesk;
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Light.eot');
+  src: url('./fonts/HankenGrotesk/HankenGrotesk-Light.eot?#iefix') format('embedded-opentype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Light.woff2') format('woff2'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Light.woff') format('woff'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Light.ttf') format('truetype'),
+    url('./fonts/HankenGrotesk/HankenGrotesk-Light.svg#HankenGrotesk-Light') format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  font-family: HankenGrotesk, sanserif;
+  height: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+header {
+  padding: 1rem;
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+}
+
+.channel-switcher {
+  display: block;
+  width: 100%;
+  font-size: 1.5rem;
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 10;
+  height: 100%;
+}
+
+.player .twitch-player {
+  position: relative;
+  z-index: 10;
+}
+
+.player:not(.dragging) .twitch-player {
+  transition: height 200ms;
+}
+
+.player .click-absorber {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 25;
+}
+
+.player.dragging .click-absorber {
+  display: block;
+}
+
+.player .control-bar {
+  padding: 1rem;
+  display: flex;
+  background-color: white;
+  cursor: grab;
+  z-index: 30;
+  position: relative;
+  border-bottom: 1px solid #cccccc;
+}
+
+.player.dragging .control-bar {
+  cursor: grabbing;
+  background-color: white;
+  padding: 1rem;
+  display: flex;
+}
+
+.player .control-bar > * {
+  cursor: default;
+}
+
+.player .control-bar .minimize {
+  display: block;
+  margin-left: auto;
+  border: 1px solid gray;
+  background: none;
+  outline: none;
+  padding: 0.5rem;
+}
+
+.player .control-bar .minimize:before {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 7px solid black;
+}
+
+.player.minimized .control-bar .minimize:before {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 7px solid black;
+  border-bottom: none;
+}
+
+.player iframe.twitch-chat {
+  height: 100%;
+  z-index: 20;
+  position: relative;
 }
